--- a/html/index.html
+++ b/html/index.html
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Czekasz na wyniki?</h2>
-                    <a href="#" class="btn btn-default btn-lg">Przyjdą mailem</a>
+                    <a href="#" class="btn btn-default btn-lg">Sa na Twoim mailu!</a>
 
                 </div>
             </div>
